plugins {
    id 'java'
    id("xyz.jpenilla.run-paper") version "2.3.1"
}

group = 'me.one_c'
version = '0.1.2'

repositories {
    mavenCentral()
    maven {
        name = "papermc"
        url = uri("https://repo.papermc.io/repository/maven-public/")
    }
}

dependencies {
    // [중요] libs 참조 코드를 완전히 지웠습니다.
    // 이제 방해꾼 없이 인터넷 창고에서 진짜 '1.21.11 API'만 가져옵니다.
    compileOnly("io.papermc.paper:paper-api:1.21.11-R0.1-SNAPSHOT")
}

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(21))
}

configurations.all {
    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

processResources {
    def props = [version: version]
    inputs.properties props
    filteringCharset 'UTF-8'
    filesMatching('plugin.yml') {
        expand props
    }
}

tasks {
    runServer {
        minecraftVersion("1.21.11")
    }
}

tasks.register('copyPlugin', Copy) {
    from tasks.jar.archiveFile
    into "D:/ai/MOC_Server/plugins"
}

tasks.jar.finalizedBy('copyPlugin')